segundo comentario desde la nube

--- a/index2.html
+++ b/index2.html
@@ -4,8 +4,8 @@
 	<title>Ejemplos GIT</title>
 </head>
 <body>
-	<p>Voy a eliminar esta shit</p>
-	<p>segundo parrafo en index 2</p>
+	<p>estoy en la nube uuuhhhhh!!!</p>
+	
 
 </body>
 </html>
